# E-field_targeting

./: CITATION.cff  LICENSE  README.md  compute_targets.m  example_InVesalius_exports.m  example_complex_geom.m  example_spherical.m  optimizer.py  pyproject.toml  test_optimizer.ipynb
coils/: 5coil_example.json
misc/: E_to_mag.m  GUI_area_select.m  GUI_point_and_dir_select.m  GUI_select_area.m  GUI_select_target.m  calculate_WCOG.m  calculate_vector_angle.m  convert_custom_bin_to_vtk.m  create_complex_surface.m  create_half_sphere.m  generate_example_E_fields.m  generate_example_efields.m  generate_ring_field.m  import_Efield_data.m  import_efield_model.m  import_invesalius_markers.m  import_targets.m  mTMS_optWeights_3D.m  optimize_Efield_complex_geom.m  optimize_Efield_spherical.m  optimize_efield_complex_geom.m  optimize_efield_spherical.m  plot_Efields.m  plot_efields.m  plot_model.m  plot_result_complex_geom.m  plot_result_spherical.m  pos2ind.m  read_Efields.m  subsample_mesh.m
src/e_field_targeting/: __init__.py  data_loader.py  optimizer.py  preprocessing.py  tms_optimizer.py  utils.py  visualization.py
